--- a/config_ar.json
+++ b/config_ar.json
@@ -124,7 +124,7 @@
     }, {
       "tag": null,
       "name": null,
-      "image": "assets/images/s/box.png",
+      "image": "assets/images/s/tools.png",
       "order": null,
       "title": null,
       "colors": null,
