--- a/config_ar.json
+++ b/config_ar.json
@@ -1246,7 +1246,9 @@
     "removeWishlistContent": "هل تريد إزالة {count} عنصر من المفضلة؟",
     "subTitleOrderConfirmed": "شكرًا على طلبك! الحين نجهّز لك كل شي. إذا كان طلبك دفع عند الاستلام، يرجى تأكيد الطلب عبر الواتساب—بتوصلك رسالة خلال 30 ثانية.",
     "emptyWishlistSubtitle02": "المفضلة فارغة حالياً. ابدأ بإضافة منتجاتك المفضلة!",
-    "weWillSendYouNotification": "بنرسّلك إشعارات أول ما تنزل عروض جديدة، عشان تكون دايمًا بالصورة وما يفوتك ولا عرض. وتقدر تغيّر الإعدادات بأي وقت يناسبك."
+    "weWillSendYouNotification": "بنرسّلك إشعارات أول ما تنزل عروض جديدة، عشان تكون دايمًا بالصورة وما يفوتك ولا عرض. وتقدر تغيّر الإعدادات بأي وقت يناسبك.",
+    "orderSuccessMsg1": "بتوصلك رسالة واتساب على رقمك المسجّل في الطلب، وبتحصل فيها كل التفاصيل المطلوبة، سواء لتأكيد الطلب أو لمتابعة شحنه.",
+    "orderSuccessMsg2": "إذا كنت مسجّل عندنا تقدر تشوف طلباتك من حسابك،\nوإذا ما مسجّل تقدر تسجّل بسهولة في بيوتي تايم.\nوبإمكانك بعد متابعة طلبك مباشرة عبر الواتساب، وما تحتاج تسجّل."
   },
-  "Datetime": "02:30:28 - Mon 15 Dec"
+  "Datetime": "02:41:46 - Tue 2 Dec"
 }
